@startuml diagramme_de_classes

skinparam linetype polyline

class Group {
    +id: int
    +name: str
}

class User {
    +id: int
    +username: str
    +first_name: str
    +last_name: str
    +email: str
    +is_staff : bool
    +is_active : bool
    +date_joined : Date
    +group : Group
}

class Bus {
    +id: int
    +name: str
    +number_seats: int
}

class Room {
    +id: int
    +name: str
}

class Material {
    +id: int
    +name: str
    +stock: int
}


abstract Event {
    +id: int
    +description: str
    +organizer: User
    +is_reserved: bool
}

class EventBus {
    +id: int
    +description: str
    +organizer: User
    +is_reserved: bool
    +resource : Bus
    +available_seats : Integer
    +departure : String
    +destination : String
    +start_time : Date
    +end_time : Date
}

class EventRoom {
    +id: int
    +description: str
    +organizer: User
    +is_reserved: bool
    +resource : Room
}

class EventMaterial {
    +id: int
    +description: str
    +organizer: User
    +is_reserved: bool
    +resource : Material
    +available_stock: int
}

abstract Reservation {
    +id: int
    +consumer: User
}

class ReservationBus {
    +id: int
    +consumer: User
    +event: EventBus
}

class ReservationRoom {
    +id: int
    +consumer: User
    +event: EventRoom
    +date: Date
    +start_time: time
    +end_time: time
}

class ReservationMaterial {
    +id: int
    +consumer: User
    +event: EventMaterial
    +date: Date
    +start_time: time
    +end_time: time
    +quantity: int
}

'Relations de dépendance
User -right-> Group
EventBus --> Bus
EventRoom --> Room
EventMaterial --> Material
ReservationBus --> EventBus
ReservationRoom -left-> EventRoom
ReservationMaterial --> EventMaterial
Event -up-> User
Reservation --> User

'Héritages évènements
Event <|-- EventBus
Event <|-up- EventRoom
Event <|-- EventMaterial

'Héritages Réservations
Reservation <|-- ReservationMaterial
Reservation <|-- ReservationBus
Reservation <|-- ReservationRoom

@enduml